kmbox-ai-rust/src/bindings/kmboxYOLO.h.rs

#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_perf_detail"][::std::mem::size_of::<_rknn_perf_detail>() - 16usize];
    ["Alignment of _rknn_perf_detail"][::std::mem::align_of::<_rknn_perf_detail>() - 8usize];
    ["Offset of field: _rknn_perf_detail::perf_data"]
        [::std::mem::offset_of!(_rknn_perf_detail, perf_data) - 0usize];
    ["Offset of field: _rknn_perf_detail::data_len"]
        [::std::mem::offset_of!(_rknn_perf_detail, data_len) - 8usize];
};
pub type rknn_perf_detail = _rknn_perf_detail;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_perf_run {
    pub run_duration: i64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_perf_run"][::std::mem::size_of::<_rknn_perf_run>() - 8usize];
    ["Alignment of _rknn_perf_run"][::std::mem::align_of::<_rknn_perf_run>() - 8usize];
    ["Offset of field: _rknn_perf_run::run_duration"]
        [::std::mem::offset_of!(_rknn_perf_run, run_duration) - 0usize];
};
pub type rknn_perf_run = _rknn_perf_run;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_sdk_version {
    pub api_version: [::std::os::raw::c_char; 256usize],
    pub drv_version: [::std::os::raw::c_char; 256usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_sdk_version"][::std::mem::size_of::<_rknn_sdk_version>() - 512usize];
    ["Alignment of _rknn_sdk_version"][::std::mem::align_of::<_rknn_sdk_version>() - 1usize];
    ["Offset of field: _rknn_sdk_version::api_version"]
        [::std::mem::offset_of!(_rknn_sdk_version, api_version) - 0usize];
    ["Offset of field: _rknn_sdk_version::drv_version"]
        [::std::mem::offset_of!(_rknn_sdk_version, drv_version) - 256usize];
};
pub type rknn_sdk_version = _rknn_sdk_version;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_mem_size {
    pub total_weight_size: u32,
    pub total_internal_size: u32,
    pub total_dma_allocated_size: u64,
    pub total_sram_size: u32,
    pub free_sram_size: u32,
    pub reserved: [u32; 10usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_mem_size"][::std::mem::size_of::<_rknn_mem_size>() - 64usize];
    ["Alignment of _rknn_mem_size"][::std::mem::align_of::<_rknn_mem_size>() - 8usize];
    ["Offset of field: _rknn_mem_size::total_weight_size"]
        [::std::mem::offset_of!(_rknn_mem_size, total_weight_size) - 0usize];
    ["Offset of field: _rknn_mem_size::total_internal_size"]
        [::std::mem::offset_of!(_rknn_mem_size, total_internal_size) - 4usize];
    ["Offset of field: _rknn_mem_size::total_dma_allocated_size"]
        [::std::mem::offset_of!(_rknn_mem_size, total_dma_allocated_size) - 8usize];
    ["Offset of field: _rknn_mem_size::total_sram_size"]
        [::std::mem::offset_of!(_rknn_mem_size, total_sram_size) - 16usize];
    ["Offset of field: _rknn_mem_size::free_sram_size"]
        [::std::mem::offset_of!(_rknn_mem_size, free_sram_size) - 20usize];
    ["Offset of field: _rknn_mem_size::reserved"]
        [::std::mem::offset_of!(_rknn_mem_size, reserved) - 24usize];
};
pub type rknn_mem_size = _rknn_mem_size;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_custom_string {
    pub string: [::std::os::raw::c_char; 1024usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_custom_string"][::std::mem::size_of::<_rknn_custom_string>() - 1024usize];
    ["Alignment of _rknn_custom_string"][::std::mem::align_of::<_rknn_custom_string>() - 1usize];
    ["Offset of field: _rknn_custom_string::string"]
        [::std::mem::offset_of!(_rknn_custom_string, string) - 0usize];
};
pub type rknn_custom_string = _rknn_custom_string;
pub const _rknn_tensor_mem_flags_RKNN_TENSOR_MEMORY_FLAGS_ALLOC_INSIDE: _rknn_tensor_mem_flags = 1;
pub const _rknn_tensor_mem_flags_RKNN_TENSOR_MEMORY_FLAGS_FROM_FD: _rknn_tensor_mem_flags = 2;
pub const _rknn_tensor_mem_flags_RKNN_TENSOR_MEMORY_FLAGS_FROM_PHYS: _rknn_tensor_mem_flags = 3;
pub const _rknn_tensor_mem_flags_RKNN_TENSOR_MEMORY_FLAGS_UNKNOWN: _rknn_tensor_mem_flags = 4;
pub type _rknn_tensor_mem_flags = ::std::os::raw::c_uint;
pub use self::_rknn_tensor_mem_flags as rknn_tensor_mem_flags;
pub const _rknn_mem_alloc_flags_RKNN_FLAG_MEMORY_FLAGS_DEFAULT: _rknn_mem_alloc_flags = 0;
pub const _rknn_mem_alloc_flags_RKNN_FLAG_MEMORY_CACHEABLE: _rknn_mem_alloc_flags = 1;
pub const _rknn_mem_alloc_flags_RKNN_FLAG_MEMORY_NON_CACHEABLE: _rknn_mem_alloc_flags = 2;
pub type _rknn_mem_alloc_flags = ::std::os::raw::c_uint;
pub use self::_rknn_mem_alloc_flags as rknn_mem_alloc_flags;
pub const _rknn_mem_sync_mode_RKNN_MEMORY_SYNC_TO_DEVICE: _rknn_mem_sync_mode = 1;
pub const _rknn_mem_sync_mode_RKNN_MEMORY_SYNC_FROM_DEVICE: _rknn_mem_sync_mode = 2;
pub const _rknn_mem_sync_mode_RKNN_MEMORY_SYNC_BIDIRECTIONAL: _rknn_mem_sync_mode = 3;
pub type _rknn_mem_sync_mode = ::std::os::raw::c_uint;
pub use self::_rknn_mem_sync_mode as rknn_mem_sync_mode;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_tensor_memory {
    pub virt_addr: *mut ::std::os::raw::c_void,
    pub phys_addr: u64,
    pub fd: i32,
    pub offset: i32,
    pub size: u32,
    pub flags: u32,
    pub priv_data: *mut ::std::os::raw::c_void,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_tensor_memory"][::std::mem::size_of::<_rknn_tensor_memory>() - 40usize];
    ["Alignment of _rknn_tensor_memory"][::std::mem::align_of::<_rknn_tensor_memory>() - 8usize];
    ["Offset of field: _rknn_tensor_memory::virt_addr"]
        [::std::mem::offset_of!(_rknn_tensor_memory, virt_addr) - 0usize];
    ["Offset of field: _rknn_tensor_memory::phys_addr"]
        [::std::mem::offset_of!(_rknn_tensor_memory, phys_addr) - 8usize];
    ["Offset of field: _rknn_tensor_memory::fd"]
        [::std::mem::offset_of!(_rknn_tensor_memory, fd) - 16usize];
    ["Offset of field: _rknn_tensor_memory::offset"]
        [::std::mem::offset_of!(_rknn_tensor_memory, offset) - 20usize];
    ["Offset of field: _rknn_tensor_memory::size"]
        [::std::mem::offset_of!(_rknn_tensor_memory, size) - 24usize];
    ["Offset of field: _rknn_tensor_memory::flags"]
        [::std::mem::offset_of!(_rknn_tensor_memory, flags) - 28usize];
    ["Offset of field: _rknn_tensor_memory::priv_data"]
        [::std::mem::offset_of!(_rknn_tensor_memory, priv_data) - 32usize];
};
pub type rknn_tensor_mem = _rknn_tensor_memory;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_input {
    pub index: u32,
    pub buf: *mut ::std::os::raw::c_void,
    pub size: u32,
    pub pass_through: u8,
    pub type_: rknn_tensor_type,
    pub fmt: rknn_tensor_format,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_input"][::std::mem::size_of::<_rknn_input>() - 32usize];
    ["Alignment of _rknn_input"][::std::mem::align_of::<_rknn_input>() - 8usize];
    ["Offset of field: _rknn_input::index"][::std::mem::offset_of!(_rknn_input, index) - 0usize];
    ["Offset of field: _rknn_input::buf"][::std::mem::offset_of!(_rknn_input, buf) - 8usize];
    ["Offset of field: _rknn_input::size"][::std::mem::offset_of!(_rknn_input, size) - 16usize];
    ["Offset of field: _rknn_input::pass_through"]
        [::std::mem::offset_of!(_rknn_input, pass_through) - 20usize];
    ["Offset of field: _rknn_input::type_"][::std::mem::offset_of!(_rknn_input, type_) - 24usize];
    ["Offset of field: _rknn_input::fmt"][::std::mem::offset_of!(_rknn_input, fmt) - 28usize];
};
pub type rknn_input = _rknn_input;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_output {
    pub want_float: u8,
    pub is_prealloc: u8,
    pub index: u32,
    pub buf: *mut ::std::os::raw::c_void,
    pub size: u32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_output"][::std::mem::size_of::<_rknn_output>() - 24usize];
    ["Alignment of _rknn_output"][::std::mem::align_of::<_rknn_output>() - 8usize];
    ["Offset of field: _rknn_output::want_float"]
        [::std::mem::offset_of!(_rknn_output, want_float) - 0usize];
    ["Offset of field: _rknn_output::is_prealloc"]
        [::std::mem::offset_of!(_rknn_output, is_prealloc) - 1usize];
    ["Offset of field: _rknn_output::index"][::std::mem::offset_of!(_rknn_output, index) - 4usize];
    ["Offset of field: _rknn_output::buf"][::std::mem::offset_of!(_rknn_output, buf) - 8usize];
    ["Offset of field: _rknn_output::size"][::std::mem::offset_of!(_rknn_output, size) - 16usize];
};
pub type rknn_output = _rknn_output;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_init_extend {
    pub ctx: rknn_context,
    pub real_model_offset: i32,
    pub real_model_size: u32,
    pub model_buffer_fd: i32,
    pub model_buffer_flags: u32,
    pub reserved: [u8; 112usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_init_extend"][::std::mem::size_of::<_rknn_init_extend>() - 136usize];
    ["Alignment of _rknn_init_extend"][::std::mem::align_of::<_rknn_init_extend>() - 8usize];
    ["Offset of field: _rknn_init_extend::ctx"]
        [::std::mem::offset_of!(_rknn_init_extend, ctx) - 0usize];
    ["Offset of field: _rknn_init_extend::real_model_offset"]
        [::std::mem::offset_of!(_rknn_init_extend, real_model_offset) - 8usize];
    ["Offset of field: _rknn_init_extend::real_model_size"]
        [::std::mem::offset_of!(_rknn_init_extend, real_model_size) - 12usize];
    ["Offset of field: _rknn_init_extend::model_buffer_fd"]
        [::std::mem::offset_of!(_rknn_init_extend, model_buffer_fd) - 16usize];
    ["Offset of field: _rknn_init_extend::model_buffer_flags"]
        [::std::mem::offset_of!(_rknn_init_extend, model_buffer_flags) - 20usize];
    ["Offset of field: _rknn_init_extend::reserved"]
        [::std::mem::offset_of!(_rknn_init_extend, reserved) - 24usize];
};
pub type rknn_init_extend = _rknn_init_extend;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_run_extend {
    pub frame_id: u64,
    pub non_block: i32,
    pub timeout_ms: i32,
    pub fence_fd: i32,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_run_extend"][::std::mem::size_of::<_rknn_run_extend>() - 24usize];
    ["Alignment of _rknn_run_extend"][::std::mem::align_of::<_rknn_run_extend>() - 8usize];
    ["Offset of field: _rknn_run_extend::frame_id"]
        [::std::mem::offset_of!(_rknn_run_extend, frame_id) - 0usize];
    ["Offset of field: _rknn_run_extend::non_block"]
        [::std::mem::offset_of!(_rknn_run_extend, non_block) - 8usize];
    ["Offset of field: _rknn_run_extend::timeout_ms"]
        [::std::mem::offset_of!(_rknn_run_extend, timeout_ms) - 12usize];
    ["Offset of field: _rknn_run_extend::fence_fd"]
        [::std::mem::offset_of!(_rknn_run_extend, fence_fd) - 16usize];
};
pub type rknn_run_extend = _rknn_run_extend;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _rknn_output_extend {
    pub frame_id: u64,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of _rknn_output_extend"][::std::mem::size_of::<_rknn_output_extend>() - 8usize];
    ["Alignment of _rknn_output_extend"][::std::mem::align_of::<_rknn_output_extend>() - 8usize];
    ["Offset of field: _rknn_output_extend::frame_id"]
        [::std::mem::offset_of!(_rknn_output_extend, frame_id) - 0usize];
};
pub type rknn_output_extend = _rknn_output_extend;
unsafe extern "C" {
    pub fn rknn_init(
        context: *mut rknn_context,
        model: *mut ::std::os::raw::c_void,
        size: u32,
        flag: u32,
        extend: *mut rknn_init_extend,
    ) -> ::std::os::raw::c_int;
}
unsafe extern "C" {
    pub fn rknn_dup_context(
        context_in: *mut rknn_context,
        context_out: *mut rknn_context,
    ) -> ::std::os::raw::c_int;
}
